5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4368/executions/1670_1399.log
== TEST (2019-04-16 19:32:02) 
-- CODE:
qa = int(input("digite a quantidade: "))
qd = int(input("digite a quantidade: "))
if (qa == qd>0):
	print(Ambrosio Rutra)
else:
	print(Demelza Olecram)
-- ERROR:
File "XXXX", line 4
    print(Ambrosio Rutra)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:33:38) 
-- CODE:
qa = int(input("digite a quantidade: "))
qd = int(input("digite a quantidade: "))
if (qa == qd>0):
	"Ambrosio Rutra > Demelza Olecram"
	print
else:
	print(Demelza Olecram)
-- ERROR:
File "XXXX", line 7
    print(Demelza Olecram)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:34:16) 
-- CODE:
qa = int(input("digite a quantidade: "))
qd = int(input("digite a quantidade: "))
if (qa == qd>0):
	"Ambrosio Rutra > Demelza Olecram"
	print
else:
	"Ombrosio Rutra < Demelza Olecram"
	print(Demelza Olecram)
-- ERROR:
File "XXXX", line 8
    print(Demelza Olecram)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
